Projet_GL/src/test/deca/syntax/invalid/unprovided/bad_float.deca
// Test bonne écriture flottant


342.52423.2
